[tool.poetry]
name = "information_disclosure"
version = "0.1.0"
description = ""
authors = ["Jonathan Leeming <jonathan@leeming.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.11,<4"
scapy = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

